--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -3,28 +3,43 @@
     <head> 
         <title>Blofeld</title> 
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"> 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/jquery.jplayer.js"></script>
-        <script type="text/javascript" src="assets/tablesorter.js"></script>
+        <script type="text/javascript" src="assets/lib.js"></script>
         <script type="text/javascript" src="assets/blofeld.js"></script>
         <link rel="stylesheet" href="assets/blofeld.css" type="text/css">
     </head> 
     <body> 
-        <h1>Blofeld</h1>
-        <ul id="controls">
-            <li id="media-skip-backward"></li>
-            <li id="media-playback-start"></li>
-            <li id="media-playback-pause"></li>
-            <li id="media-skip-forward"></li>
-        </ul>
+        <div id="header">
+            <div><h1>Blofeld</h1></div>
+            <div id="player_container">
+                <ul id="controls">
+                    <li id="skip_back" >back</li>
+                    <li id="play">play</li>
+                    <li id="pause">pause</li>
+                    <li id="skip_forward">forward</li>
+                </ul>
+                <div id="now_playing">
+                    <div id="cover_art"></div>
+                    <span id="np_title"></span><br>by <span id="np_artist"></span> from <span id="np_album"></span>
+                </div>
+            </div>
+            <div id="find">
+                <form name="find" action="javascript:find()" autocomplete="off">
+                    <div id="search_icon"></div>
+                    <div id="clear_search"></div>
+                    <input type="text" name="query" id="query">
+                </form>
+            </div>
+        </div>
         <table id="browser">
             <tr>
                 <td id="artistsContainer"></td>
                 <td rowspan="2" id="songsContainer"></td>
             </tr>
             <tr>
-                <td id="albumsContainer"></td>
+                <td id="albumsContainer">
+                </td>
             </tr>
         </table>
+        <div id="player"></div>
     </body>
 </html>
