--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="assets/lib.js"></script>
         <script type="text/javascript" src="assets/blofeld.js"></script>
         <link rel="stylesheet" href="assets/blofeld.css" type="text/css">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
     </head> 
     <body> 
         <div id="header">
