--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -1,14 +1,14 @@
-<!doctype html> 
-<html> 
-    <head> 
-        <title>Blofeld</title> 
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8"> 
+<!doctype html>
+<html>
+    <head>
+        <title>Blofeld</title>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <script type="text/javascript" src="./static/javascripts/lib.js"></script>
         <script type="text/javascript" src="./static/javascripts/blofeld.js"></script>
         <link rel="stylesheet" href="./static/stylesheets/blofeld.css" type="text/css">
         <link rel="shortcut icon" type="image/x-icon" href="./static/images/favicon.ico">
-    </head> 
-    <body> 
+    </head>
+    <body>
         <div id="header">
             <div><h1>Blofeld</h1></div>
             <div id="player_container">
@@ -41,11 +41,16 @@
         </div>
         <table id="browser">
             <tr>
-                <td id="artistsContainer"></td>
-                <td rowspan="2" id="songsContainer"></td>
+                <td id="artistsContainer">
+
+                </td>
+                <td rowspan="2" id="songsContainer">
+
+                </td>
             </tr>
             <tr>
                 <td id="albumsContainer">
+
                 </td>
             </tr>
         </table>
