Changes to using couchdbkit instead of python-couchdb

--- a/interfaces/default/templates/list_songs.tmpl
+++ b/interfaces/default/templates/list_songs.tmpl
@@ -15,10 +15,10 @@
                                 <tr class="song" id="$song">
                                     <td class="status"></td>
                                     <td class="track-number">#try#$songs[$song]['tracknumber']#except# #end try#</td>
-                                    <td class="title">$songs[$song]['title']</td>
-                                    <td class="genre">#echo ', '.join($songs[$song]['genre'])#</td>
-                                    <td class="artist">$songs[$song]['artist']</td>
-                                    <td class="album">$songs[$song]['album']</td>
+                                    <td class="title">#try#$songs[$song]['title']#except#Unknown Title#end try#</td>
+                                    <td class="genre">#try##echo ', '.join($songs[$song]['genre'])##except# #end try#</td>
+                                    <td class="artist">#try#$songs[$song]['artist']#except#Unknown Artist#end try#</td>
+                                    <td class="album">#try#$songs[$song]['album']#except#Unknown Album#end try#</td>
                                 </tr>
 #end for
                             </tbody>
