--- a/interfaces/default/templates/list_artists.tmpl
+++ b/interfaces/default/templates/list_artists.tmpl
@@ -7,8 +7,8 @@
                             </thead>
                             <tbody>
 #for $artist in $artists
-                                <tr class="artist" id="$artist">
-                                    <td>$artists[$artist]</td>
+                                <tr class="artist" id="$artist['id']">
+                                    <td>$artist['name']</td>
                                 </tr>
 #end for
                             </tbody>
