Lots of unrelated changes. Tim is gonna hate me.
 * Updated jPlayer to the newest version
 * Did away with lib.js and went back to using the
   separate libraries.
 * Changed the transcoding pipeline for mp3s to use id3mux
   instead of id3v2mux because jPlayer is stupid.
 * Added comments and cleaned up the code in the new multi-
   process file scanner and the improved library code.
 * Made a few tweaks to the web interface
 * Other miscellaneous code cleanup

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -3,7 +3,9 @@
     <head>
         <title>Blofeld</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <script type="text/javascript" src="./static/javascripts/lib.js"></script>
+        <script type="text/javascript" src="./static/javascripts/jquery-1.4.2.min.js"></script>
+        <script type="text/javascript" src="./static/javascripts/jquery.jplayer.min.js"></script>
+        <script type="text/javascript" src="./static/javascripts/jquery.lightbox-0.5.pack.js"></script>
         <script type="text/javascript" src="./static/javascripts/blofeld.js"></script>
         <link rel="stylesheet" href="./static/stylesheets/blofeld.css" type="text/css">
         <link rel="shortcut icon" type="image/x-icon" href="./static/images/favicon.ico">
