--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <script type="text/javascript" src="./static/javascripts/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="./static/javascripts/jquery.jplayer.min.js"></script>
-        <script type="text/javascript" src="./static/javascripts/jquery.lightbox-0.5.pack.js"></script>
+        <script type="text/javascript" src="./static/javascripts/jquery.lightbox-0.5.mod.js"></script>
         <script type="text/javascript" src="./static/javascripts/blofeld.js"></script>
         <link rel="stylesheet" href="./static/stylesheets/blofeld.css" type="text/css">
         <link rel="shortcut icon" type="image/x-icon" href="./static/images/favicon.ico">
