--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="./static/js/blofeld.js"></script>
         <link type="image/x-icon" rel="shortcut icon" href="./static/images/favicon.ico">
     </head>
-    <body>
+    <body class="ui-state-default">
 <!--        <div id="wrapper">-->
             <div id="sidebar">
                 
